  (Xavier Leroy, Nicolás Ojeda Bär, review by Sébastien Hinderer)

- #11981: Reduce size of OCaml installations by removing debugging information
  from installed bytecode executables.  It is no longer possible to
  run ocamldebug over these installed bytecode executables, nor to get
  exception backtraces for them.
  (Xavier Leroy, review by David Allsopp, report by Fabrice Le Fessant)

### Bug fixes:

- #11887, #11893: Code duplication in pattern-matching compilation
  (Vincent Laviron, report par Greta Yorsh, review by Luc Maranget and
   Gabriel Scherer)

- #10664, #11600: Unsoundness in the typing of polymorphic methods
  involving polymorphic variants
  (Jacques Garrigue, report by Mike Shulman, review by Gabriel Scherer)

- #11302, #11412: `ocamlc` and `ocamlopt` should not remove generated files
  when they are not regular files.
  (Xavier Leroy, report by Thierry Martinez, review by
   Anil Madhavapeddy, Nicolás Ojeda Bär, David Allsopp)

- #10348, #10560, #11561: Expand GADT equations lazily during unification to
  avoid ambiguity
  (Jacques Garrigue, review by Leo White)

- #11436: Fix wrong stack backtrace for out-of-bound exceptions raised
  by leaf functions.
  (Tom Kelly and Xavier Leroy, review by Mark Shinwell)

- #11643: Add missing test declaration to float_compare test, so that it will
  run.
  (Stefan Muenzel, review by David Allsopp)

- #11630: Use correct location when reporting record labels with non-existent
  paths.
  (Nicolás Ojeda Bär, report by Jason Gross, review by Gabriel Scherer)

- #11727: Ensure push_defaults can push past module patterns, fixing an
  currying optimisation accidentally disabled by #10340.
  (Stephen Dolan, review by Gabriel Scherer)

- #11732: Ensure that types from packed modules are always generalised
  (Stephen Dolan and Leo White, review by Jacques Garrigue)

- #11771: Use a more relaxed mode for unification in Ctype.subst
  (Leo White, review by Jacques Garrigue and Gabriel Scherer)
