@@ -481,6 +481,10 @@ Working version
   exception backtraces for them.
   (Xavier Leroy, review by David Allsopp, report by Fabrice Le Fessant)
 
+- #11???: Use native symlinks on Windows for the OCaml installation, reducing
+  disk usage considerably.
+  (David Allsopp, review by ???)
+
 ### Bug fixes:
 
 - #11887, #11893: Code duplication in pattern-matching compilation
